# loto-bot

./: .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  README.md  main.py  pyproject.toml
prompts/: prompt-codex-gpt55-260614.md  prompt-codex-gpt55-260716.md  prompt-codex-gpt55-260717.md
src/: __init__.py  main.py
src/api/: __init__.py  dependencies.py  exception_handlers.py  exceptions.py  openapi.py  responses.py  server.py
src/api/mappers/: __init__.py  api_exception_mapper.py  api_response_mapper.py
src/api/routes/: __init__.py  bets.py  health.py  sessions.py
src/api/schemas/: __init__.py  automation_schema.py  error_schema.py
src/application/: __init__.py
src/application/dto/: __init__.py  automation_dto.py
src/application/notification/: __init__.py  error_message_builder.py  notification_message_builder.py
src/application/ports/: __init__.py  bet_repository_port.py  browser_port.py  notification_port.py  validation_code_port.py
src/application/services/: __init__.py  placed_bet_service.py  session_failure_handler.py
src/application/use_cases/: __init__.py  get_placed_bet.py  list_placed_bets.py  operation_executor.py  run_bet_flow.py  session_control.py
src/domain/: __init__.py
src/infrastructure/: __init__.py
src/shared/: __init__.py  constants.py  datetime_utils.py  masking.py
tests/integration/: test_api_routes.py
tests/unit/: test_api_error_handlers.py  test_api_exception_mapper.py  test_architecture.py  test_domain_and_use_cases.py  test_edges.py  test_infrastructure_clients.py  test_portal_data.py
(+42 files in other folders)
