[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loto-bot"
version = "0.1.0"
description = "API REST para automatizar, de forma controlada, o fluxo de aposta no portal Loterias Online CAIXA."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "playwright>=1.44.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "tzdata>=2024.1",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "anyio>=4.0.0",
    "grimp>=3.7.0",
    "ruff>=0.6.0",
]

[project.scripts]
loto-bot = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.coverage.run]
omit = [
    "src/**/__init__.py",
    "src/main.py",
    "src/infrastructure/browser/playwright_browser.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
